--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
   <div id="example">
   </div>
 </body style="margin:0px;border:0px">
-<script src="build/common.js"></script>
-<script src="build/entry.bundle.js"></script>
+<script src="common.js"></script>
+<script src="entry.bundle.js"></script>
 </html>
